tests/paczka1/fuzzy1/20646652.err
Error in line 6: KyTAuQS S41 90,7
Error in line 15: A363 A341 12,9
Error in line 20: qG9hbJhDgR S41 77,5
Error in line 28: ECg2Yhuk S906 24,9
Error in line 26: GKkeH8Gnf A341 75,1
Error in line 34: A363 A363 20,5
